--- a/index.html
+++ b/index.html
@@ -1,26 +1,82 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Resilient Tech Support</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Logan Square Tech Help</title>
   <style>
-    body { font-family: sans-serif; padding: 2em; background: #f4f4f4; color: #333; }
-    section { background: white; padding: 2em; max-width: 600px; margin: auto; border-radius: 10px; }
-    h1 { color: #0073e6; }
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f4f9;
+      margin: 0;
+      padding: 0;
+      color: #333;
+    }
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 20px;
+    }
+    header {
+      text-align: center;
+      padding: 20px;
+    }
+    header img {
+      max-width: 120px;
+      margin-bottom: 10px;
+    }
+    h1 {
+      font-size: 1.8rem;
+    }
+    h2 {
+      color: #222;
+      border-bottom: 2px solid #ccc;
+      padding-bottom: 5px;
+    }
+    ul {
+      list-style-type: none;
+      padding: 0;
+    }
+    li {
+      padding: 8px 0;
+      border-bottom: 1px solid #e0e0e0;
+    }
+    .note {
+      margin-top: 20px;
+      font-style: italic;
+      color: #666;
+    }
   </style>
 </head>
 <body>
-  <section>
-    <h1>Resilient Tech Support</h1>
-    <p>Affordable help with technology for home users and small businesses.</p>
-    <ul>
-      <li>Device repair & upgrades</li>
-      <li>Remote troubleshooting</li>
-      <li>Tech education & support for beginners</li>
-      <li>Wi-Fi setup & networking help</li>
-    </ul>
-    <p>📧 Email: support@yourdomain.com</p>
-    <p>📞 Phone: (XXX) XXX-XXXX</p>
-  </section>
+  <div class="container">
+    <header>
+      <img src="thumbnail_Icon.png" alt="Logan Square Tech Logo" />
+      <h1>🛠️ Logan Square Tech Help – Neighborhood Tech Support You Can Trust</h1>
+    </header>
+
+    <section>
+      <h2>✅ Services Offered</h2>
+
+      <h3>For Homes & Individuals</h3>
+      <ul>
+        <li>Computer tune-ups & virus removal – <strong>$50 flat</strong></li>
+        <li>Laptop/desktop troubleshooting – <strong>$60/hr</strong></li>
+        <li>Device setup (printers, phones, smart TVs, Wi-Fi) – <strong>$40 flat</strong></li>
+        <li>Data recovery or transfer – <strong>$60–$100</strong></li>
+        <li>Remote tech support – <strong>$30/30 min</strong></li>
+      </ul>
+
+      <h3>For Small Businesses</h3>
+      <ul>
+        <li>Network setup & troubleshooting – <strong>$75/hr</strong></li>
+        <li>Backup solutions (Google Drive, OneDrive, NAS setup) – <strong>Starts at $100</strong></li>
+        <li>On-call tech support (contract-free) – <strong>$75/hr</strong></li>
+        <li>Monthly care plans available – <strong>Ask for details</strong></li>
+      </ul>
+
+      <p class="note">Prices are flexible — we strive to meet the needs of our neighbors in Logan Square, especially lower-income households. Don’t hesitate to reach out and ask.</p>
+    </section>
+  </div>
 </body>
 </html>
