--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
       <p>If you have any questions, want custom pricing, or need help, please reach out using the form below or call/text us directly.</p>
       <form>
         <label for="name">Name</label>
-        <input type="text" id="name" name="name" placeholder="Your name" required />
+        <input type="text" id="name" name="name" placeholder="" required />
 
         <label for="email">Email</label>
-        <input type="email" id="email" name="email" placeholder="Your email address" required />
+        <input type="email" id="email" name="email" placeholder="info@resilienttech.org" required />
 
         <label for="phone">Phone Number</label>
-        <input type="tel" id="phone" name="phone" placeholder="Your phone number" />
+        <input type="tel" id="phone" name="phone" placeholder="(847) 616-8745" />
 
         <label for="message">Message</label>
         <textarea id="message" name="message" rows="4" placeholder="How can we help you?" required></textarea>
