--- a/index.html
+++ b/index.html
@@ -110,22 +110,27 @@
 
     <section class="contact">
       <h2>Contact Us</h2>
-      <p>If you have any questions, want custom pricing, or need help, please reach out using the form below or call/text us directly.</p>
-      <form>
+      <p>If you have any questions, want custom pricing, or need help, please contact us directly or use the form below.</p>
+
+      <p><strong>Phone:</strong> (847) 616-8745<br>
+      <strong>Email:</strong> <a href="mailto:info@resilienttech.org</a></p>
+
+      <form action="https://formspree.io/f/movwkkje" method="POST">
         <label for="name">Name</label>
-        <input type="text" id="name" name="name" placeholder="" required />
+        <input type="text" id="name" name="name" placeholder="Your name" required />
 
         <label for="email">Email</label>
-        <input type="email" id="email" name="email" placeholder="info@resilienttech.org" required />
+        <input type="email" id="email" name="email" placeholder="Your email address" required />
 
         <label for="phone">Phone Number</label>
-        <input type="tel" id="phone" name="phone" placeholder="(847) 616-8745" />
+        <input type="tel" id="phone" name="phone" placeholder="Your phone number" />
 
         <label for="message">Message</label>
         <textarea id="message" name="message" rows="4" placeholder="How can we help you?" required></textarea>
 
         <button type="submit">Send Message</button>
       </form>
+      <p class="note">This form is powered by Formspree. Replace <code>yourformid</code> in the form action with your actual ID from <a href="https://formspree.io">Formspree.io</a>.</p>
     </section>
   </div>
 </body>
