--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Logan Square Tech Help</title>
   <style>
     body {
@@ -12,91 +12,140 @@
       padding: 0;
       color: #333;
     }
+
     .container {
-      max-width: 800px;
-      margin: 0 auto;
+      max-width: 900px;
+      margin: auto;
       padding: 20px;
     }
+
     header {
       text-align: center;
-      padding: 20px;
+      padding: 30px 20px 10px;
     }
+
     header img {
-      max-width: 120px;
+      max-width: 100px;
       margin-bottom: 10px;
     }
+
     h1 {
       font-size: 1.8rem;
     }
+
     h2 {
       color: #222;
       border-bottom: 2px solid #ccc;
       padding-bottom: 5px;
+      margin-top: 40px;
     }
+
+    h3 {
+      margin-top: 30px;
+    }
+
     ul {
       list-style-type: none;
       padding: 0;
     }
+
     li {
-      padding: 8px 0;
+      padding: 10px 0;
       border-bottom: 1px solid #e0e0e0;
     }
+
     .note {
       margin-top: 20px;
       font-style: italic;
       color: #666;
     }
+
+    /* Contact Styles */
     .contact {
       margin-top: 40px;
-      padding-top: 20px;
+      padding-top: 30px;
       border-top: 2px solid #ccc;
+    }
+
+    .contact a {
+      color: #0077cc;
+      text-decoration: none;
+    }
+
+    .contact a:hover {
+      text-decoration: underline;
+    }
+
+    .contact-info-box {
       background: #fff;
-      padding: 30px;
+      border: 1px solid #ccc;
+      padding: 20px;
       border-radius: 8px;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
-    }
-    .contact h2 {
-      margin-top: 0;
-    }
-    .contact-info {
-      background-color: #f0f0f5;
-      padding: 15px;
-      border-radius: 5px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
       margin-bottom: 20px;
     }
-    .contact-info p {
-      margin: 5px 0;
-    }
+
     .contact form {
       display: flex;
       flex-direction: column;
     }
+
     .contact label {
-      margin: 10px 0 5px;
+      margin-top: 10px;
+      font-weight: bold;
     }
-    .contact input, .contact textarea {
+
+    .contact input,
+    .contact textarea {
       padding: 10px;
+      margin-top: 5px;
       font-size: 1rem;
       border: 1px solid #ccc;
       border-radius: 4px;
-      width: 100%;
-      box-sizing: border-box;
+      background: #fff;
     }
+
     .contact button {
       margin-top: 15px;
-      padding: 10px;
-      background-color: #333;
+      padding: 12px;
+      background-color: #0077cc;
       color: white;
       border: none;
       cursor: pointer;
       border-radius: 4px;
-      transition: background-color 0.3s ease;
+      font-weight: bold;
+      transition: background 0.3s ease;
     }
+
     .contact button:hover {
-      background-color: #555;
+      background-color: #005fa3;
+    }
+
+    /* Mobile responsive */
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 1.4rem;
+      }
+
+      .container {
+        padding: 15px;
+      }
+
+      header img {
+        max-width: 80px;
+      }
+
+      .contact-info-box {
+        padding: 15px;
+      }
+
+      .contact button {
+        padding: 10px;
+      }
     }
   </style>
 </head>
+
 <body>
   <div class="container">
     <header>
@@ -129,21 +178,22 @@
 
     <section class="contact">
       <h2>Contact Us</h2>
-      <div class="contact-info">
-        <p><strong>Phone:</strong> (847) 616-8745</p>
+      <p>If you have any questions, want custom pricing, or need help, please reach out or use the form below.</p>
+
+      <div class="contact-info-box">
+        <p><strong>Phone:</strong> <a href="tel:8476168745">(847) 616-8745</a></p>
         <p><strong>Email:</strong> <a href="mailto:info@resilienttech.org">info@resilienttech.org</a></p>
       </div>
-      <p>Have questions or want a custom quote? Send us a message below:</p>
 
       <form action="https://formspree.io/f/movwkkje" method="POST">
         <label for="name">Name</label>
-        <input type="text" id="name" name="name" placeholder="Your name" required />
+        <input type="text" id="name" name="name" placeholder="Your name" required>
 
         <label for="email">Email</label>
-        <input type="email" id="email" name="email" placeholder="Your email address" required />
+        <input type="email" id="email" name="email" placeholder="Your email address" required>
 
         <label for="phone">Phone Number</label>
-        <input type="tel" id="phone" name="phone" placeholder="Your phone number" />
+        <input type="tel" id="phone" name="phone" placeholder="Your phone number">
 
         <label for="message">Message</label>
         <textarea id="message" name="message" rows="4" placeholder="How can we help you?" required></textarea>
@@ -151,7 +201,7 @@
         <button type="submit">Send Message</button>
       </form>
 
-      <p class="note">This form is powered by Formspree.</p>
+      <p class="note">Form powered by <a href="https://formspree.io" target="_blank">Formspree</a>. We’ll respond within 24 hours.</p>
     </section>
   </div>
 </body>
