--- a/index.html
+++ b/index.html
@@ -178,13 +178,14 @@
 
     <section class="contact">
       <h2>Contact Us</h2>
-      <p>If you have any questions, want custom pricing, or need help, please reach out or use the form below.</p>
+      <p>If you have any questions, want custom pricing, or need help, please reach out directly via email/phone, or use the form below.</p>
 
       <div class="contact-info-box">
         <p><strong>Phone:</strong> <a href="tel:8476168745">(847) 616-8745</a></p>
         <p><strong>Email:</strong> <a href="mailto:info@resilienttech.org">info@resilienttech.org</a></p>
       </div>
 
+      <h3>Submission Form</h3>
       <form action="https://formspree.io/f/movwkkje" method="POST">
         <label for="name">Name</label>
         <input type="text" id="name" name="name" placeholder="Your name" required>
