--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Logan Square Tech Help</title>
+  <title>Resilient Tech</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -161,7 +161,7 @@
         <li>Computer tune-ups & virus removal – <strong>$50 flat</strong></li>
         <li>Laptop/desktop troubleshooting – <strong>$60/hr</strong></li>
         <li>Device setup (printers, phones, smart TVs, Wi-Fi) – <strong>$40 flat</strong></li>
-        <li>Data recovery or transfer – <strong>$60–$100</strong></li>
+        <li>Data recovery or transfer – <strong>$60–$100 flat</strong></li>
         <li>Remote tech support – <strong>$30/30 min</strong></li>
       </ul>
 
