--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
   <div class="container">
     <header>
       <img src="thumbnail_Icon.png" alt="Logan Square Tech Logo" />
-      <h1>🛠️ Logan Square Tech Help – Neighborhood Tech Support You Can Trust</h1>
+      <h1>🛠️ Resilient Tech – Neighborhood Support You Can Trust</h1>
     </header>
 
     <section>
@@ -168,12 +168,12 @@
       <h3>For Small Businesses</h3>
       <ul>
         <li>Network setup & troubleshooting – <strong>$75/hr</strong></li>
-        <li>Backup solutions (Google Drive, OneDrive, NAS setup) – <strong>Starts at $100</strong></li>
+        <li>Backup solutions (Google Drive, OneDrive, NAS setup) – <strong>Starts at $100 flat</strong></li>
         <li>On-call tech support (contract-free) – <strong>$75/hr</strong></li>
         <li>Monthly care plans available – <strong>Ask for details</strong></li>
       </ul>
 
-      <p class="note">Prices are flexible — we strive to meet the needs of our neighbors in Logan Square, especially lower-income households. Don’t hesitate to reach out and ask.</p>
+      <p class="note">Prices are flexible — we strive to meet the needs of our neighbors in Logan Square. Don’t hesitate to reach out and ask.</p>
     </section>
 
     <section class="contact">
